# databricks-docs-mcp

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  FAST_CRAWL_GUIDE.md  INSTALL_FIX.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  QUICK_GITHUB_PUBLISH.sh  README.md  START_NOW.md  USAGE_EXAMPLES.md  UV_MIGRATION_SUMMARY.md  UV_SETUP.md  __init__.py  __main__.py  config.example.py  prepare_for_sharing.sh  pyproject.toml  requirements.txt  server.py  setup.py  start_server.sh  verify_setup.sh
crawler/: __init__.py  async_scraper.py  parser.py  scheduler.py  scraper.py
embeddings/: search.py
resources/: docs_resources.py
src/databricks_docs_mcp/embeddings/: __init__.py  embedder.py  vector_db.py
src/databricks_docs_mcp/resources/: __init__.py
src/databricks_docs_mcp/storage/: cache.py  models.py
src/databricks_docs_mcp/tools/: __init__.py  recommend.py  search.py
storage/: __init__.py
tests/: __init__.py  test_cache.py  test_embedder.py  test_parser.py
