[project]
name = "databricks-docs-mcp"
version = "1.0.0"
description = "MCP Server for Databricks AWS Documentation with semantic search, browsing, and recommendations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Databricks Docs MCP Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.14.3",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.0",
    "sentence-transformers>=5.2.0",
    "markdownify>=1.2.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "APScheduler>=3.11.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[project.scripts]
databricks-docs-mcp = "databricks_docs_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "black>=25.12.0",
    "ruff>=0.14.11",
]

test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_docs_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

